# snip

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  sandbox.py
.github/workflows/: publish-to-pages.yaml  python-package.yaml  python-package.yml
docs/: history.md  index.md  roadmap.md
snip/: __init__.py  cli.py  config.py  logging.ini  minja.py  snip.py
tests/: conftest.py  test_config.py  test_get.py  test_template.py
