[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "snip"
description = "A simple snippet tool"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["cli", "snippet"]
dependencies = []
requires-python = ">= 3.9"
authors = [
    {name = "Hai Vu", email="haivu2004@gmail.com"}
]
# The version is managed by hatchling
dynamic = ["version"]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
snip = "snip.cli:main"

[tool.hatch.version]
path = "snip/__init__.py"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = []
log_cli = true
log_cli_level = "WARNING"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "COM812",
    "ISC001",
]
select = ["F", "E", "W", "I001"] # pyflakes, pycodestyle, isort

[tool.ruff.lint.isort]
case-sensitive = true
